shell: Check if doc implements Annotations interface before cast

Without this check, evince will crash when a right-click
on a non-pdf document is performed.

https://bugzilla.gnome.org/show_bug.cgi?id=737197